added google cert pending to about me courses

--- a/application/templates/aboutme.html
+++ b/application/templates/aboutme.html
@@ -53,7 +53,8 @@
                 strengthen
                 my web & software development skills.
             </p>
-            <p class="alert alert-info">I received my Bachelor of Business Administration (BBA) from CUNY Baruch College in
+            <p class="alert alert-info">I received my Bachelor of Business Administration (BBA) from CUNY Baruch College
+                in
                 2015.</p>
         </div>
     </div>
@@ -117,7 +118,14 @@
             <ul class="list-unstyled">
                 <li>
                     <p>
-                        <span class="badge alert-secondary">UDEMY</span>
+                        <span class="badge bg-secondary">GOOGLE</span>
+                        Google Data Analytics Certificate
+                        <strong class="text-muted">(IN PROGRESS)</strong>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <span class="badge bg-secondary">UDEMY</span>
                         <a href="https://www.udemy.com/certificate/UC-f80b2c91-6ea2-45cc-9c09-a063bf14ee82/"
                            target="_blank" rel="noopener noreferrer">
                             100 Days of Code: The Complete Python Pro Bootcamp for 2022
@@ -126,7 +134,7 @@
                 </li>
                 <li>
                     <p>
-                        <span class="badge alert-secondary">UDEMY</span>
+                        <span class="badge bg-secondary">UDEMY</span>
                         <a href="https://www.udemy.com/certificate/UC-63042348-3168-4da0-9df0-d8530cd980be/"
                            target="_blank" rel="noopener noreferrer">
                             The Ultimate MySQL Bootcamp: Go from SQL Beginner to Expert
