updated about me -> BigQuery updated resume

--- a/application/templates/aboutme.html
+++ b/application/templates/aboutme.html
@@ -76,7 +76,7 @@
         </tr>
         <tr>
             <th scope="row">SOFTWARE</th>
-            <td>Microsoft Office, PyCharm, MySQL, Tableau, Google Colab</td>
+            <td>Microsoft Office, PyCharm, MySQL, BigQuery, Tableau, Google Colab</td>
         </tr>
         <tr>
             <th scope="row">SKILLS</th>
