updated about me -> BigQuery updated resume

--- a/application/templates/contact.html
+++ b/application/templates/contact.html
@@ -43,15 +43,16 @@
 {% endif %}
 
 <!-- Contact Me -->
-<div class="container py-2 my-3 text-md-start text-center">
-    <p class="alert alert-warning text-center">
-        I am currently looking for full-time employment!
-        <br>
-        If you believe I would be a good fit* for your company, <br> please reach out!
-        <br>
-        <br>
-        * <span class="small">I prefer fully-remote, non-freelance opportunities</span> *
-    </p>
+<!-- Looking for Work (off) -->
+<!--<div class="container py-2 my-3 text-md-start text-center">-->
+<!--    <p class="alert alert-warning text-center">-->
+<!--        I am currently looking for full-time employment!-->
+<!--        <br>-->
+<!--        If you believe I would be a good fit* for your company, <br> please reach out!-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        * <span class="small">I prefer fully-remote, non-freelance opportunities</span> *-->
+<!--    </p>-->
 
     <!-- Contact Form -->
     <div class="container py-4">
