--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -410,14 +410,16 @@
     </h6>
     <!-- Heading -->
     <h2 class="border-bottom border-2 border-info py-2">Get In Touch</h2>
-    <p class="alert alert-warning text-center">
-        I am currently looking for full-time employment!
-        <br>
-        If you believe I would be a good fit* for your company, <br> please reach out!
-        <br>
-        <br>
-        * <span class="small">I prefer fully-remote, non-freelance opportunities</span> *
-    </p>
+
+<!--    <p class="alert alert-warning text-center">-->
+<!--        I am currently looking for full-time employment!-->
+<!--        <br>-->
+<!--        If you believe I would be a good fit* for your company, <br> please reach out!-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        * <span class="small">I prefer fully-remote, non-freelance opportunities</span> *-->
+<!--    </p>-->
+
     <!-- Contact Form -->
     <div class="container py-4">
         <form method="POST" class="form col-lg-6" role="form">
