updated about me... google data analytics course (in progress -> completed)

--- a/application/templates/aboutme.html
+++ b/application/templates/aboutme.html
@@ -7,7 +7,7 @@
 <!-- Page Header -->
 <header class="bg-image-sub-page py-md-4"
         style="background-image: url('static/images/bg/meritt-thomas-zqIOvV-D3JQ-unsplash - tree lights.jpg');"
->
+        xmlns="http://www.w3.org/1999/html">
     <div class="container">
         <div class="row mb-4 mx-4 px-4">
             <!-- Intro Text -->
@@ -119,8 +119,10 @@
                 <li>
                     <p>
                         <span class="badge bg-secondary">GOOGLE</span>
-                        Google Data Analytics Certificate
-                        <strong class="text-muted">(IN PROGRESS)</strong>
+                        <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/Q5TGSG2EFSTB"
+                           target="_blank" rel="noopener noreferrer">
+                            Google Data Analytics Certificate
+                        </a>
                     </p>
                 </li>
                 <li>
